--- a/js/data/locale/or/dateformats.json
+++ b/js/data/locale/or/dateformats.json
@@ -9,10 +9,11 @@
                 "f": "MMMM d"
             },
             "dmy": {
-                "s": "yy-M-d",
+                "s": "d-M-yy",
                 "m": "d MMM yy",
-                "l": "yyyy MMM d"
-            },
+                "l": "d MMMM yy",
+                "f": "d MMMM yyyy"
+            },  
             "my": {
                 "s": "yy-M",
                 "m": "MM-yyyy",
