More fiexs for QA result. Sync up cldr 26.0.1

--- a/js/data/locale/es/MX/sysres.json
+++ b/js/data/locale/es/MX/sysres.json
@@ -24,8 +24,8 @@
     "N11": "N",
     "MMM12": "dic",
     "N12": "D",
-    "LLLL9": "Septiembre",
-    "LLL9": "Sept.",
+    "LLLL9": "septiembre",
+    "LLL9": "sep",
     "EEE0": "dom",
     "EE0": "do",
     "E0": "D",
@@ -47,14 +47,34 @@
     "EEE6": "sáb",
     "EE6": "sá",
     "E6": "S",
-    "cc0": "DO",
-    "cc1": "LU",
-    "cc2": "MA",
-    "cc3": "MI",
-    "c3": "X",
-    "cc4": "JU",
-    "cc5": "VI",
-    "cc6": "SA",
+    "cccc0": "domingo",
+    "ccc0": "dom",
+    "cc0": "do",
+    "c0": "d",
+    "cccc1": "lunes",
+    "ccc1": "lun",
+    "cc1": "lu",
+    "c1": "l",
+    "cccc2": "martes",
+    "ccc2": "mar",
+    "cc2": "ma",
+    "c2": "m",
+    "cccc3": "miércoles",
+    "ccc3": "mié",
+    "cc3": "mié.",
+    "c3": "m",
+    "cccc4": "jueves",
+    "ccc4": "jue",
+    "cc4": "ju",
+    "c4": "j",
+    "cccc5": "viernes",
+    "ccc5": "vie",
+    "cc5": "vi",
+    "c5": "v",
+    "cccc6": "sábado",
+    "ccc6": "sáb",
+    "cc6": "sá",
+    "c6": "s",
     "a0": "a.m.",
     "a1": "p.m.",
     "durationLongDays": "one#{num} día|#{num} días",
