--- a/js/data/locale/sysres.json
+++ b/js/data/locale/sysres.json
@@ -85,11 +85,11 @@
     "azh4": "PM",
     "azh5": "PM",
     "azh6": "PM",
-    "a0-ethiopic": "morning",
-    "a1-ethiopic": "noon",
-    "a2-ethiopic": "afternoon",
-    "a3-ethiopic": "evening",
-    "a4-ethiopic": "night",
+    "a0-ethiopic": "AM",
+    "a1-ethiopic": "PM",
+    "a2-ethiopic": "PM",
+    "a3-ethiopic": "PM",
+    "a4-ethiopic": "PM",
     "G-1": "BCE",
     "G1": "CE",
     
