Update number format of az-Latn-AZ and some test cases

--- a/js/data/locale/az/sysres.json
+++ b/js/data/locale/az/sysres.json
@@ -186,5 +186,5 @@
     "1#1 yr|#{num} yrs": "#{num} il",
     "1#1 year|#{num} years": "#{num} il",
     "{duration} ago": "-{duration}",
-    "in {duration}": "+{duration}",
+    "in {duration}": "+{duration}"
 }
