--- a/js/data/locale/az/dateformats.json
+++ b/js/data/locale/az/dateformats.json
@@ -2,112 +2,64 @@
     "gregorian": {
         "order": "{date} {time}",
         "date": {
-            "dmwy": {
-                "f": "d MMMM yyyy, EEEE",
-                "l": "d MMMM yyyy, EEE",
-                "m": "d MMM yyyy, EE",
-                "s": "dd.MM.yy, E"
+            "dm": {
+                "s": "M-d",
+                "m": "d MMM"
             },
             "dmy": {
-                "f": "d MMMM yyyy",
-                "l": "d MMMM yyyy",
-                "m": "d MMM yyyy",
-                "s": "dd.MM.yy"
-            },
-            "dmw": {
-                "f": "d MMMM, EEEE",
-                "l": "d MMMM, EEE",
-                "m": "d MMM, EE",
-                "s": "dd.MM, E"
-            },
-            "dm": {
-                "f": "d MMMM",
-                "l": "d MMMM",
-                "m": "d MMM",
-                "s": "dd.MM"
+                "s": "yy-M-d",
+                "m": "d MMM, yy",
+                "l": "d MMM, yyyy",
+                "f": "d, MMMM, yyyy"
             },
             "my": {
-                "f": "LLLL yyyy",
-                "l": "LLLL yyyy",
-                "m": "LLL yyyy",
-                "s": "MM.yy"
-            },
-            "dw": {
-                "f": "d EEEE",
-                "l": "d EEE",
-                "m": "d EE",
-                "s": "dd.E"
-            },
-            "w": {
-                "f": "EEEE",
-                "l": "EEE",
-                "m": "EE",
-                "s": "E"
-            },
-            "d": {
-                "f": "d",
-                "l": "d",
-                "m": "d",
-                "s": "dd"
+                "s": "yy-M",
+                "m": "MMM, yy",
+                "l": "MMM, yyyy",
+                "f": "MMMM, yyyy"
             },
             "m": {
-                "f": "MMMM",
-                "l": "MMMM",
-                "m": "MMM",
-                "s": "MM"
+                "f": "MMM"
+            },
+            "d": {
+                "s": "d",
+                "f": "d",
+                "l": "d",
+                "m": "d"
+            },
+            "dmwy": {
+                "s": "E, yy-M-d",
+                "m": "EE, yy-M-d",
+                "l": "EEE, d, MMM, yyyy",
+                "f": "EEEE, d, MMM, yyyy"
+            },
+            "dmw": {
+                "s": "E, M-d",
+                "m": "EE, M-d",
+                "l": "EEEE, d, MMM",
+                "f": "EEEE, d, MMM"
             },
             "n": {
                 "m": "N"
-            },
-            "y": {
-                "f": "yyyy",
-                "l": "yyyy",
-                "m": "yyyy",
-                "s": "yy"
-            },
-            "e": {
-                "f": "cccc",
-                "l": "ccc",
-                "m": "cc",
-                "s": "c"
-            },
-            "l": {
-                "f": "LLLL",
-                "l": "LLLL",
-                "m": "LLL",
-                "s": "LL"
             }
         },
         "time": {
             "12": {
-                "h": "h",
-                "m": "mm",
-                "s": "ss",
-                "ah": "h a",
-                "hm": "h:mm",
-                "ms": "mm:ss",
-                "ahm": "h:mm a",
-                "hms": "h:mm:ss",
-                "hmz": "h:mm z",
-                "ahmz": "h:mm a z",
-                "ahms": "h:mm:ss a",
+                "ahmsz": "h:mm:ss a z",
                 "hmsz": "h:mm:ss z",
-                "ahmsz": "h:mm:ss a z"
+                "ahms": "h:mm:ss a",
+                "hms": "h:mm:ss",
+                "ahmz": "h:mm a z",
+                "ahm": "h:mm a",
+                "hm": "h:mm",
+                "hmz": "h:mm z",
+                "ah": "h a"
             },
             "24": {
-                "h": "HH",
-                "m": "mm",
-                "s": "ss",
-                "ah": "HH",
-                "hm": "HH:mm",
-                "ms": "mm:ss",
-                "ahm": "HH:mm",
-                "hms": "HH:mm:ss",
-                "hmz": "HH:mm z",
-                "ahmz": "HH:mm z",
-                "ahms": "HH:mm:ss",
+                "ahmsz": "HH:mm:ss z",
                 "hmsz": "HH:mm:ss z",
-                "ahmsz": "HH:mm:ss z"
+                "ahmz": "HH:mm z",
+                "hmz": "HH:mm z"
             }
         },
         "range": {
