--- a/js/data/locale/az/dateformats.json
+++ b/js/data/locale/az/dateformats.json
@@ -1,106 +1,85 @@
 {
     "gregorian": {
+        "order": "{date} {time}",
         "date": {
-            "dmwy": {
-                "s": "dd.MM.yy, E",
-                "m": "d MMM yyyy, EE",
-                "l": "d MMMM yyyy, EEE",
-                "f": "d MMMM yyyy, EEEE"
+            "dm": {
+                "s": "M-d",
+                "m": "d MMM"
             },
             "dmy": {
-                "s": "dd.MM.yy",
-                "m": "d MMM yyyy",
-                "l": "d MMMM yyyy"
-            },
-            "dmw": {
-                "s": "dd.MM, E",
-                "m": "d MMM, EE",
-                "l": "d MMMM, EEE",
-                "f": "d MMMM, EEEE"
-            },
-            "dm": {
-                "s": "dd.MM",
-                "m": "d MMM",
-                "l": "d MMMM"
+                "s": "yy-M-d",
+                "m": "d MMM, yy",
+                "l": "d MMM, yyyy",
+                "f": "d, MMMM, yyyy"
             },
             "my": {
-                "s": "MM.yy",
-                "m": "LLL yyyy",
-                "l": "LLLL yyyy",
-                "f": "LLLL yyyy"
+                "s": "yy-M",
+                "m": "MMM, yy",
+                "l": "MMM, yyyy",
+                "f": "MMMM, yyyy"
             },
-            "dw": {
-                "s": "dd.E",
-                "m": "d EE",
-                "l": "d EEE",
-                "f": "d EEEE"
+            "m": {
+                "f": "MMM"
             },
             "d": {
-                "s": "dd",
+                "s": "d",
                 "f": "d",
                 "l": "d",
                 "m": "d"
             },
-            "m": {
-                "s": "MM",
-                "m": "MMM",
-                "l": "MMMM"
+            "dmwy": {
+                "s": "E, yy-M-d",
+                "m": "EE, yy-M-d",
+                "l": "EEE, d, MMM, yyyy",
+                "f": "EEEE, d, MMM, yyyy"
+            },
+            "dmw": {
+                "s": "E, M-d",
+                "m": "EE, M-d",
+                "l": "EEEE, d, MMM",
+                "f": "EEEE, d, MMM"
             },
             "n": {
                 "m": "N"
-            },
-            "l": {
-                "f": "LLLL",
-                "l": "LLLL",
-                "m": "LLL",
-                "s": "LL"
-            },
-            "e": {
-                "f": "cccc",
-                "l": "ccc",
-                "m": "cc",
-                "s": "c"
             }
         },
         "time": {
             "12": {
                 "ahmsz": "h:mm:ss a z",
+                "hmsz": "h:mm:ss z",
                 "ahms": "h:mm:ss a",
+                "hms": "h:mm:ss",
                 "ahmz": "h:mm a z",
                 "ahm": "h:mm a",
+                "hm": "h:mm",
+                "hmz": "h:mm z",
                 "ah": "h a"
             },
             "24": {
                 "ahmsz": "HH:mm:ss z",
-                "ahms": "HH:mm:ss",
                 "hmsz": "HH:mm:ss z",
-                "hms": "HH:mm:ss",
                 "ahmz": "HH:mm z",
-                "ahm": "HH:mm",
-                "hmz": "HH:mm z",
-                "ah": "HH",
-                "hm": "HH:mm",
-                "h": "HH"
+                "hmz": "HH:mm z"
             }
         },
         "range": {
             "c00": {
-                "s": "{st} – {et} {sy}-{sm}-{sd}",
-                "m": "{st} – {et} {sd} {sm}, {sy}",
-                "l": "{st} – {et} {sd} {sm}, {sy}",
-                "f": "{st} – {et} {sd}, {sm}, {sy}"
+                "s": "{sy}-{sm}-{sd} {st} – {et}",
+                "m": "{sd} {sm}, {sy} {st} – {et}",
+                "l": "{sd} {sm}, {sy} {st} – {et}",
+                "f": "{sd}, {sm}, {sy} {st} – {et}"
             },
             "c01": {
-                "s": "{st} {sy}–{sm}–{sd} – {et} {ed}",
-                "m": "{st} {sy}–{sm}–{sd} – {et} {ed}",
-                "l": "{st} {sy}–{sm}–{sd} – {et} {ed}",
-                "f": "{st} {sy}–{sm}–{sd} – {et} {ed}"
+                "s": "{sy}–{sm}–{sd} {st} – {ed} {et}",
+                "m": "{sy}–{sm}–{sd} {st} – {ed} {et}",
+                "l": "{sy}–{sm}–{sd} {st} – {ed} {et}",
+                "f": "{sy}–{sm}–{sd} {st} – {ed} {et}"
             },
             "c02": {
-                "s": "{st} {sy}–{sm}–{sd} – {et} {em}–{ed}",
-                "m": "{st} {sy}–{sm}–{sd} – {et} {em}–{ed}",
-                "l": "{st} {sy}–{sm}–{sd} – {et} {em}–{ed}",
-                "f": "{st} {sy}–{sm}–{sd} – {et} {em}–{ed}"
+                "s": "{sy}–{sm}–{sd} {st} – {em}–{ed} {et}",
+                "m": "{sy}–{sm}–{sd} {st} – {em}–{ed} {et}",
+                "l": "{sy}–{sm}–{sd} {st} – {em}–{ed} {et}",
+                "f": "{sy}–{sm}–{sd} {st} – {em}–{ed} {et}"
             },
             "c10": {
                 "s": "{sy}–{sm}–{sd} – {ed}",
