Re-created sysres.json in order to update separator values

--- a/js/data/locale/az/Cyrl/sysres.json
+++ b/js/data/locale/az/Cyrl/sysres.json
@@ -91,6 +91,5 @@
     "#{num}w": "#{num} w",
     "durationShortMonths": "#{num} m",
     "#{num}y": "#{num} y",
-    "finalSeparatorFull": ", ",
-    "finalSeparatorLong": ", "
+    "finalSeparatorFull": ", "
 }
