--- a/js/data/locale/az/sysres.json
+++ b/js/data/locale/az/sysres.json
@@ -191,7 +191,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " və ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " və ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": ", ",
