--- a/js/data/locale/en/AU/sysres.json
+++ b/js/data/locale/en/AU/sysres.json
@@ -2,6 +2,5 @@
     "a0": "am",
     "a1": "pm",
     "durationShortMillis": "one#{num} ms|#{num} ms",
-    "finalSeparatorFull": " and ",
-    "finalSeparatorLong": " and "
+    "finalSeparatorFull": " and "
 }
