--- a/js/data/locale/es/sysres.json
+++ b/js/data/locale/es/sysres.json
@@ -192,7 +192,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " y ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " y ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": ", ",
