--- a/js/data/locale/fa/sysres.json
+++ b/js/data/locale/fa/sysres.json
@@ -269,7 +269,7 @@
     "separatorFull": "،‏ ",
     "finalSeparatorFull": "، و ",
     "separatorLong": "،‏ ",
-    "finalSeparatorLong": "، و ",
+    "finalSeparatorLong": "،‏ ",
     "separatorMedium": "،‏ ",
     "finalSeparatorMedium": "،‏ ",
     "separatorShort": " ",
