--- a/js/data/locale/fi/sysres.json
+++ b/js/data/locale/fi/sysres.json
@@ -191,7 +191,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " ja ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " ja ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": " ",
