--- a/js/data/locale/ga/sysres.json
+++ b/js/data/locale/ga/sysres.json
@@ -115,7 +115,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": ", agus ",
     "separatorLong": ", ",
-    "finalSeparatorLong": ", agus ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": " ",
