--- a/js/data/locale/gd/sysres.json
+++ b/js/data/locale/gd/sysres.json
@@ -191,7 +191,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " agus ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " agus ",
+    "finalSeparatorLong": " ‘s ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": " ‘s ",
     "separatorShort": " ",
