--- a/js/data/locale/gsw/sysres.json
+++ b/js/data/locale/gsw/sysres.json
@@ -113,7 +113,7 @@
     "durationShortMonths": "#{num} m",
     "#{num}y": "#{num} y",
     "separatorFull": ", ",
-    "finalSeparatorFull": " und ",
+    "finalSeparatorFull": ", ",
     "separatorLong": ", ",
     "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
