--- a/js/data/locale/hi/sysres.json
+++ b/js/data/locale/hi/sysres.json
@@ -115,7 +115,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": ", और ",
     "separatorLong": ", ",
-    "finalSeparatorLong": ", और ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": ", ",
