--- a/js/data/locale/hr/sysres.json
+++ b/js/data/locale/hr/sysres.json
@@ -191,7 +191,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " i ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " i ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": " ",
