--- a/js/data/locale/km/sysres.json
+++ b/js/data/locale/km/sysres.json
@@ -112,10 +112,10 @@
     "#{num}w": "#{num} សប្ដាហ៍",
     "durationShortMonths": "#{num} ខែ",
     "#{num}y": "#{num} ឆ្នាំ",
-    "separatorFull": ", ",
-    "finalSeparatorFull": " ",
+    "separatorFull": " ",
+    "finalSeparatorFull": " និង ",
     "separatorLong": " ",
-    "finalSeparatorLong": " និង ",
+    "finalSeparatorLong": " ",
     "separatorMedium": " ",
     "finalSeparatorMedium": " ",
     "separatorShort": " ",
