--- a/js/data/locale/ko/sysres.json
+++ b/js/data/locale/ko/sysres.json
@@ -113,8 +113,8 @@
     "#{num}w": "#{num}주",
     "durationShortMonths": "#{num}개월",
     "#{num}y": "#{num}년",
-    "separatorFull": ", ",
-    "finalSeparatorFull": " 및 ",
+    "separatorFull": " ",
+    "finalSeparatorFull": " ",
     "separatorLong": " ",
     "finalSeparatorLong": " ",
     "separatorMedium": " ",
