--- a/js/data/locale/mr/sysres.json
+++ b/js/data/locale/mr/sysres.json
@@ -115,7 +115,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " आणि ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " आणि ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": " ",
