--- a/js/data/locale/nb/sysres.json
+++ b/js/data/locale/nb/sysres.json
@@ -115,7 +115,7 @@
     "separatorFull": ", ",
     "finalSeparatorFull": " og ",
     "separatorLong": ", ",
-    "finalSeparatorLong": " og ",
+    "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
     "separatorShort": ", ",
