--- a/js/data/locale/to/sysres.json
+++ b/js/data/locale/to/sysres.json
@@ -112,8 +112,8 @@
     "#{num}w": "#{num} u",
     "durationShortMonths": "#{num} m",
     "#{num}y": "#{num} t",
-    "separatorFull": " mo ",
-    "finalSeparatorFull": " mo ",
+    "separatorFull": ", ",
+    "finalSeparatorFull": " mo e ",
     "separatorLong": ", ",
     "finalSeparatorLong": " mo e ",
     "separatorMedium": ", ",
