--- a/js/data/locale/tr/sysres.json
+++ b/js/data/locale/tr/sysres.json
@@ -112,8 +112,8 @@
     "#{num}w": "one#{num}h|#{num}h",
     "durationShortMonths": "one#{num}a|#{num}a",
     "#{num}y": "one#{num}y|#{num}y",
-    "separatorFull": ", ",
-    "finalSeparatorFull": " ve ",
+    "separatorFull": " ",
+    "finalSeparatorFull": " ",
     "separatorLong": " ",
     "finalSeparatorLong": " ",
     "separatorMedium": " ",
