--- a/js/data/locale/zh/Hant/sysres.json
+++ b/js/data/locale/zh/Hant/sysres.json
@@ -56,6 +56,8 @@
     "#{num}d": "#{num}日",
     "#{num}w": "#{num}週",
     "durationShortMonths": "#{num}個月",
+    "separatorFull": " ",
+    "finalSeparatorFull": " ",
     "separatorLong": " ",
     "finalSeparatorLong": " ",
     "separatorMedium": " ",
