--- a/js/data/locale/zh/sysres.json
+++ b/js/data/locale/zh/sysres.json
@@ -120,8 +120,8 @@
     "#{num}w": "#{num}周",
     "durationShortMonths": "#{num}个月",
     "#{num}y": "#{num}年",
-    "separatorFull": "、",
-    "finalSeparatorFull": "和",
+    "separatorFull": "",
+    "finalSeparatorFull": "",
     "separatorLong": "",
     "finalSeparatorLong": "",
     "separatorMedium": "",
