--- a/js/data/locale/en/IE/sysres.json
+++ b/js/data/locale/en/IE/sysres.json
@@ -1,6 +1,5 @@
 {
     "a0": "a.m.",
     "a1": "p.m.",
-    "finalSeparatorFull": " and ",
-    "finalSeparatorLong": " and "
+    "finalSeparatorFull": " and "
 }
