--- a/js/data/locale/en/SG/sysres.json
+++ b/js/data/locale/en/SG/sysres.json
@@ -1,6 +1,5 @@
 {
     "a0": "am",
     "a1": "pm",
-    "finalSeparatorFull": " and ",
-    "finalSeparatorLong": " and "
+    "finalSeparatorFull": " and "
 }
