--- a/js/data/locale/et/sysres.json
+++ b/js/data/locale/et/sysres.json
@@ -113,7 +113,7 @@
     "durationShortMonths": "one#{num} k|#{num} k",
     "#{num}y": "one#{num} a|#{num} a",
     "separatorFull": ", ",
-    "finalSeparatorFull": " ja ",
+    "finalSeparatorFull": ", ",
     "separatorLong": ", ",
     "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
