--- a/js/data/locale/lt/sysres.json
+++ b/js/data/locale/lt/sysres.json
@@ -188,10 +188,10 @@
     "#{num}w": "one#{num} sav.|few#{num} sav.|many#{num} sav.|#{num} sav.",
     "durationShortMonths": "one#{num} mėn.|few#{num} mėn.|many#{num} mėn.|#{num} mėn.",
     "#{num}y": "one#{num} m.|few#{num} m.|many#{num} m.|#{num} m.",
-    "separatorFull": ", ",
+    "separatorFull": " ",
     "finalSeparatorFull": " ir ",
     "separatorLong": " ",
-    "finalSeparatorLong": " ir ",
+    "finalSeparatorLong": " ",
     "separatorMedium": " ",
     "finalSeparatorMedium": " ",
     "separatorShort": " ",
