--- a/js/data/locale/nl/sysres.json
+++ b/js/data/locale/nl/sysres.json
@@ -189,7 +189,7 @@
     "durationShortMonths": "one#{num} m|#{num} m",
     "#{num}y": "one#{num} jr|#{num} jr",
     "separatorFull": ", ",
-    "finalSeparatorFull": " en ",
+    "finalSeparatorFull": ", ",
     "separatorLong": ", ",
     "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
