--- a/js/data/locale/sv/sysres.json
+++ b/js/data/locale/sv/sysres.json
@@ -189,7 +189,7 @@
     "durationShortMonths": "one#{num}m|#{num}m",
     "#{num}y": "one#{num}å|#{num}å",
     "separatorFull": ", ",
-    "finalSeparatorFull": " och ",
+    "finalSeparatorFull": ", ",
     "separatorLong": ", ",
     "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
