--- a/js/data/locale/zu/sysres.json
+++ b/js/data/locale/zu/sysres.json
@@ -113,7 +113,7 @@
     "durationShortMonths": "one#{num} m|#{num} m",
     "#{num}y": "one#{num} y|#{num} y",
     "separatorFull": ", ",
-    "finalSeparatorFull": ", ne-",
+    "finalSeparatorFull": ", ",
     "separatorLong": ", ",
     "finalSeparatorLong": ", ",
     "separatorMedium": ", ",
