--- a/js/data/locale/km/sysres.json
+++ b/js/data/locale/km/sysres.json
@@ -1,96 +1,123 @@
 {
-    "generated": true,
-    "NN1": "មក",
-    "NN2": "កុ",
-    "NN3": "មី",
-    "NN4": "មេ",
-    "NN5": "ឧស",
-    "NN6": "មិ",
-    "NN7": "កក",
-    "NN8": "សី",
-    "NN9": "កញ",
-    "NN10": "តុ",
-    "NN11": "វិ",
-    "NN12": "ធ្",
-    "MMM1": "មករា",
-    "MMM2": "កុម្ភៈ",
-    "MMM3": "មីនា",
-    "MMM4": "មេសា",
-    "MMM5": "ឧសភា",
-    "MMM6": "មិថុនា",
-    "MMM7": "កក្កដា",
-    "MMM8": "សីហា",
-    "MMM9": "កញ្ញា",
-    "MMM10": "តុលា",
-    "MMM11": "វិច្ឆិកា",
-    "MMM12": "ធ្នូ",
     "MMMM1": "មករា",
+    "MMM1": "មករា",
+    "NN1": "មក",
+    "N1": "1",
     "MMMM2": "កុម្ភៈ",
+    "MMM2": "កុម្ភៈ",
+    "NN2": "កុ",
+    "N2": "2",
     "MMMM3": "មីនា",
+    "MMM3": "មីនា",
+    "NN3": "មី",
+    "N3": "3",
     "MMMM4": "មេសា",
+    "MMM4": "មេសា",
+    "NN4": "មេ",
+    "N4": "4",
     "MMMM5": "ឧសភា",
+    "MMM5": "ឧសភា",
+    "NN5": "ឧស",
+    "N5": "5",
     "MMMM6": "មិថុនា",
+    "MMM6": "មិថុនា",
+    "NN6": "មិ",
+    "N6": "6",
     "MMMM7": "កក្កដា",
+    "MMM7": "កក្កដា",
+    "NN7": "កក",
+    "N7": "7",
     "MMMM8": "សីហា",
+    "MMM8": "សីហា",
+    "NN8": "សី",
+    "N8": "8",
     "MMMM9": "កញ្ញា",
+    "MMM9": "កញ្ញា",
+    "NN9": "កញ",
+    "N9": "9",
     "MMMM10": "តុលា",
+    "MMM10": "តុលា",
+    "NN10": "តុ",
+    "N10": "10",
     "MMMM11": "វិច្ឆិកា",
+    "MMM11": "វិច្ឆិកា",
+    "NN11": "វិ",
+    "N11": "11",
     "MMMM12": "ធ្នូ",
-    "E0": "1",
-    "E1": "2",
-    "E2": "3",
-    "E3": "4",
-    "E4": "5",
-    "E5": "6",
-    "E6": "7",
-    "EE0": "អា",
-    "EE1": "ចន",
-    "EE2": "អង",
-    "EE3": "ពុ",
-    "EE4": "ព្",
-    "EE5": "សុ",
-    "EE6": "សៅ",
-    "EEE0": "អាទិត្យ",
-    "EEE1": "ចន្ទ",
-    "EEE2": "អង្គារ",
-    "EEE3": "ពុធ",
-    "EEE4": "ព្រហស្បតិ៍",
-    "EEE5": "សុក្រ",
-    "EEE6": "សៅរ៍",
+    "MMM12": "ធ្នូ",
+    "NN12": "ធ្",
+    "N12": "12",
     "EEEE0": "អាទិត្យ",
+    "EEE0": "អាទិត្យ",
+    "EE0": "អាទិត្យ",
+    "E0": "1",
     "EEEE1": "ចន្ទ",
+    "EEE1": "ចន្ទ",
+    "EE1": "ចន្ទ",
+    "E1": "2",
     "EEEE2": "អង្គារ",
+    "EEE2": "អង្គារ",
+    "EE2": "អង្គារ",
+    "E2": "3",
     "EEEE3": "ពុធ",
+    "EEE3": "ពុធ",
+    "EE3": "ពុធ",
+    "E3": "4",
     "EEEE4": "ព្រហស្បតិ៍",
+    "EEE4": "ព្រហស្បតិ៍",
+    "EE4": "ព្រហស្បតិ៍",
+    "E4": "5",
     "EEEE5": "សុក្រ",
+    "EEE5": "សុក្រ",
+    "EE5": "សុក្រ",
+    "E5": "6",
     "EEEE6": "សៅរ៍",
+    "EEE6": "សៅរ៍",
+    "EE6": "សៅរ៍",
+    "E6": "7",
     "a0": "ព្រឹក",
     "a1": "ល្ងាច",
-    "G-1": "មុន គ.ស.",
-    "G1": "គ.ស.",
-    "#{num}s": "#{num}វ",
-    "1#1 sec|#{num} sec": "#{num} វិន",
+    "G-1": "BCE",
+    "G1": "CE",
+    "1#1 millisecond|#{num} milliseconds": "#{num} មិល្លី​វិនាទី",
     "1#1 second|#{num} seconds": "#{num} វិនាទី",
-    "durationShortMinutes": "#{num}ន",
-    "1#1 min|#{num} min": "#{num} នាទី",
     "1#1 minute|#{num} minutes": "#{num} នាទី",
-    "#{num}h": "#{num}ម",
-    "1#1 hr|#{num} hrs": "#{num} ម៉ោង",
     "1#1 hour|#{num} hours": "#{num} ម៉ោង",
-    "#{num}d": "#{num}ថ",
-    "durationLongDays": "#{num} ថ្ងៃ",
-    "1#1 day|#{num} days": "#{num} ថ្ងៃ",
-    "#{num}w": "#{num}ស",
-    "1#1 wk|#{num} wks": "#{num} សប្",
-    "1#1 week|#{num} weeks": "#{num} សប្ដាហ៍",
-    "durationShortMonths": "#{num}ខ",
-    "1#1 mon|#{num} mons": "#{num} ខែ",
-    "1#1 month|#{num} months": "#{num} ខែ",
-    "#{num}y": "#{num}ឆ",
-    "1#1 yr|#{num} yrs": "#{num} ឆ្ន",
-    "1#1 year|#{num} years": "#{num} ឆ្នាំ",
-    "{duration} ago": "{duration}​មុន",
     "in {duration}": "ក្នុង​រយៈ​ពេល {duration}",
-    "finalSeparatorFull": ", ",
-    "separatorLong": " "
+    "{duration} ago": "{duration}​មុន",
+    "1#1 day|#{num} days": "#{num} ថ្ងៃ",
+    "1#1 week|#{num} weeks": "#{num} សប្ដាហ៍",
+    "1#1 month|#{num} months": "#{num} ខែ",
+    "1#1 year|#{num} years": "#{num} ឆ្នាំ",
+    "#{num} ms": "#{num} ms",
+    "1#1 sec|#{num} sec": "#{num} វិនាទី",
+    "1#1 min|#{num} min": "#{num} នាទី",
+    "1#1 hr|#{num} hrs": "#{num} ម៉ោង",
+    "durationLongDays": "#{num} ថ្ងៃ",
+    "1#1 wk|#{num} wks": "#{num} សប្ដាហ៍",
+    "1#1 mon|#{num} mons": "#{num} ខែ",
+    "1#1 yr|#{num} yrs": "#{num} ឆ្នាំ",
+    "1#1 se|#{num} sec": "#{num} វិនាទី",
+    "1#1 mi|#{num} min": "#{num} នាទី",
+    "durationMediumHours": "#{num} ម៉ោង",
+    "1#1 dy|#{num} dys": "#{num} ថ្ងៃ",
+    "durationMediumWeeks": "#{num} សប្ដាហ៍",
+    "1#1 mo|#{num} mos": "#{num} ខែ",
+    "durationMediumYears": "#{num} ឆ្នាំ",
+    "durationShortMillis": "#{num}ms",
+    "#{num}s": "#{num} វិនាទី",
+    "durationShortMinutes": "#{num} នាទី",
+    "#{num}h": "#{num} ម៉ោង",
+    "#{num}d": "#{num} ថ្ងៃ",
+    "#{num}w": "#{num} សប្ដាហ៍",
+    "durationShortMonths": "#{num} ខែ",
+    "#{num}y": "#{num} ឆ្នាំ",
+    "separatorFull": " ",
+    "finalSeparatorFull": " និង ",
+    "separatorLong": " ",
+    "finalSeparatorLong": " ",
+    "separatorMedium": " ",
+    "finalSeparatorMedium": " ",
+    "separatorShort": " ",
+    "finalSeparatorShort": " "
 }
