Update duration medium format data. and fix unittest failures

--- a/js/data/locale/cs/sysres.json
+++ b/js/data/locale/cs/sysres.json
@@ -176,8 +176,8 @@
     "durationMediumMillis": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
     "1#1 se|#{num} sec": "#{num} se",
     "1#1 mi|#{num} min": "#{num} mi",
-    "durationMediumHours": "one#{num} den|few#{num} dny|#{num} dní",
-    "1#1 dy|#{num} dys": "#{num} tý",
+    "durationMediumHours": "#{num} ho",
+    "1#1 dy|#{num} dys": "one#{num} den|few#{num} dny|#{num} dní",
     "durationMediumWeeks": "#{num} tý",
     "1#1 mo|#{num} mos": "#{num} mě",
     "durationMediumYears": "one#{num} rok|few#{num} ro|#{num} let",
