--- a/js/data/locale/th/sysres.json
+++ b/js/data/locale/th/sysres.json
@@ -177,14 +177,14 @@
     "1#1 wk|#{num} wks": "#{num} สัปดาห์",
     "1#1 mon|#{num} mons": "#{num} เดือน",
     "1#1 yr|#{num} yrs": "#{num} ปี",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "#{num} มิลลิวิ",
+    "1#1 se|#{num} sec": "#{num} วิ",
+    "1#1 mi|#{num} min": "#{num} นา",
+    "durationMediumHours": "#{num} ชั",
+    "1#1 dy|#{num} dys": "#{num} วัน",
+    "durationMediumWeeks": "#{num} สั",
+    "1#1 mo|#{num} mos": "#{num} เด",
+    "durationMediumYears": "#{num} ปี",
     "durationShortMillis": "#{num} มิลลิวิ",
     "#{num}s": "#{num}วิ",
     "durationShortMinutes": "#{num}นาที",
