--- a/js/data/locale/zh/sysres.json
+++ b/js/data/locale/zh/sysres.json
@@ -105,14 +105,14 @@
     "1#1 wk|#{num} wks": "#{num}周",
     "1#1 mon|#{num} mons": "#{num}个月",
     "1#1 yr|#{num} yrs": "#{num}年",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "#{num}毫秒",
+    "1#1 se|#{num} sec": "#{num}秒",
+    "1#1 mi|#{num} min": "#{num}分鐘",
+    "durationMediumHours": "#{num}小時",
+    "1#1 dy|#{num} dys": "#{num}天",
+    "durationMediumWeeks": "#{num}周",
+    "1#1 mo|#{num} mos": "#{num}個月",
+    "durationMediumYears": "#{num}年",
     "durationShortMillis": "#{num}毫秒",
     "#{num}s": "#{num}秒",
     "durationShortMinutes": "#{num}分钟",
