--- a/js/data/locale/fr/CA/sysres.json
+++ b/js/data/locale/fr/CA/sysres.json
@@ -1,5 +1,4 @@
 {
-    "in {duration}": "dans {duration} jours",
-    "{duration} ago": "il y a {duration} jours",
-    "1#1 mon|#{num} mons": "one#{num} m.|#{num} m."
+  "1#1 mon|#{num} mons": "one#{num} m.|#{num} m.",
+  "1#1 mo|#{num} mos": "one#{num} m.|#{num} m."
 }
