--- a/js/data/locale/rm/sysres.json
+++ b/js/data/locale/rm/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} emna|#{num} emnas",
     "1#1 mon|#{num} mons": "one#{num} mais|#{num} mais",
     "1#1 yr|#{num} yrs": "one#{num} onn|#{num} onns",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num}ms|#{num}ms",
+    "1#1 se|#{num} sec": "#{num} se",
+    "1#1 mi|#{num} min": "#{num} mi",
+    "durationMediumHours": "one#{num} ura|#{num} ur",
+    "1#1 dy|#{num} dys": "one#{num} di|#{num} dis",
+    "durationMediumWeeks": "#{num} em",
+    "1#1 mo|#{num} mos": "#{num} ma",
+    "durationMediumYears": "one#{num} onn|#{num} on",
     "durationShortMillis": "one#{num}ms|#{num}ms",
     "#{num}s": "one#{num} secs.|#{num} secs.",
     "durationShortMinutes": "one#{num} mins.|#{num} mins.",
