--- a/js/data/locale/ro/sysres.json
+++ b/js/data/locale/ro/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "one#{num} săpt.|few#{num} săpt.|#{num} săpt.",
     "1#1 mon|#{num} mons": "one#{num} lună|few#{num} luni|#{num} luni",
     "1#1 yr|#{num} yrs": "one#{num} an|few#{num} ani|#{num} ani",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|few#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "#{num} se",
+    "1#1 mi|#{num} min": "#{num} mi",
+    "durationMediumHours": "one#{num} oră|#{num} ore",
+    "1#1 dy|#{num} dys": "#{num} zi",
+    "durationMediumWeeks": "#{num} să",
+    "1#1 mo|#{num} mos": "#{num} lu",
+    "durationMediumYears": "one#{num} an|#{num} ani",
     "durationShortMillis": "one#{num} ms|few#{num} ms|#{num} ms",
     "#{num}s": "one#{num} s|few#{num} s|#{num} s",
     "durationShortMinutes": "one#{num} m|few#{num} m|#{num} m",
