--- a/js/data/locale/ru/sysres.json
+++ b/js/data/locale/ru/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "one#{num} нед|few#{num} нед|many#{num} нед|#{num} нед",
     "1#1 mon|#{num} mons": "one#{num} мес|few#{num} мес|many#{num} мес|#{num} мес",
     "1#1 yr|#{num} yrs": "one#{num} г.|few#{num} г.|many#{num} л.|#{num} г.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} мс|few#{num} мс|many#{num} мс|#{num} мс",
+    "1#1 se|#{num} sec": "#{num} се",
+    "1#1 mi|#{num} min": "#{num} ми",
+    "durationMediumHours": "#{num} ч",
+    "1#1 dy|#{num} dys": "#{num} дн",
+    "durationMediumWeeks": "#{num} не",
+    "1#1 mo|#{num} mos": "#{num} ме",
+    "durationMediumYears": "#{num} г",
     "durationShortMillis": "one#{num} мс|few#{num} мс|many#{num} мс|#{num} мс",
     "#{num}s": "one#{num} с|few#{num} с|many#{num} с|#{num} с",
     "durationShortMinutes": "one#{num} мин|few#{num} мин|many#{num} мин|#{num} мин",
