--- a/js/data/locale/si/sysres.json
+++ b/js/data/locale/si/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#සති {num}|#සති {num}",
     "1#1 mon|#{num} mons": "one#මාස {num}|#මාස {num}",
     "1#1 yr|#{num} yrs": "one#වසර {num}|#වසර {num}",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#මි.ත {num}|#මි.ත {num}",
+    "1#1 se|#{num} sec": "one#ත {num}|#ත {num}",
+    "1#1 mi|#{num} min": "one#මි {num}|#මි {num}",
+    "durationMediumHours": "one#පැ {num}|#පැ {num}",
+    "1#1 dy|#{num} dys": "one#දි {num}|#දි {num}",
+    "durationMediumWeeks": "one#ස {num}|#ස {num}",
+    "1#1 mo|#{num} mos": "one#මා {num}|#මා {num}",
+    "durationMediumYears": "one#ව {num}|#ව {num}",
     "durationShortMillis": "one#මි.ත {num}|#මි.ත {num}",
     "#{num}s": "one#ත {num}|#ත {num}",
     "durationShortMinutes": "one#මි {num}|#මි {num}",
