--- a/js/data/locale/sk/sysres.json
+++ b/js/data/locale/sk/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "one#{num} týž.|few#{num} týž.|many#{num} týž.|#{num} týž.",
     "1#1 mon|#{num} mons": "one#{num} mes.|few#{num} mes.|many#{num} mes.|#{num} mes.",
     "1#1 yr|#{num} yrs": "one#{num} r.|few#{num} r.|many#{num} r.|#{num} r.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "#{num} se",
+    "1#1 mi|#{num} min": "#{num} min",
+    "durationMediumHours": "#{num} ho",
+    "1#1 dy|#{num} dys": "#{num} d.",
+    "durationMediumWeeks": "#{num} tý",
+    "1#1 mo|#{num} mos": "#{num} me",
+    "durationMediumYears": "#{num} r.",
     "durationShortMillis": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
     "#{num}s": "one#{num} s|few#{num} s|many#{num} s|#{num} s",
     "durationShortMinutes": "one#{num} min|few#{num} min|many#{num} min|#{num} min",
