--- a/js/data/locale/sr/sysres.json
+++ b/js/data/locale/sr/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} нед.|few#{num} нед.|#{num} нед.",
     "1#1 mon|#{num} mons": "one#{num} мес.|few#{num} мес.|#{num} мес.",
     "1#1 yr|#{num} yrs": "one#{num} год|few#{num} год.|#{num} год.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|few#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "#{num} сек",
+    "1#1 mi|#{num} min": "#{num} мин",
+    "durationMediumHours": "few#{num} са|many#{num} са|#{num} сат",
+    "1#1 dy|#{num} dys": "few#{num} да|many#{num} да|#{num} дан",
+    "durationMediumWeeks": "#{num} нед",
+    "1#1 mo|#{num} mos": "#{num} мес",
+    "durationMediumYears": "#{num} год",
     "durationShortMillis": "one#{num} ms|few#{num} ms|#{num} ms",
     "#{num}s": "one#{num} сек|few#{num} сек|#{num} сек",
     "durationShortMinutes": "one#{num} м|few#{num} м|#{num} м",
