--- a/js/data/locale/sw/sysres.json
+++ b/js/data/locale/sw/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#wiki {num}|#wiki {num}",
     "1#1 mon|#{num} mons": "one#mwezi {num}|#miezi {num}",
     "1#1 yr|#{num} yrs": "one#mwaka {num}|#miaka {num}",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#ms {num}|#ms {num}",
+    "1#1 se|#{num} sec": "#sekunde {num}",
+    "1#1 mi|#{num} min": "#dakika {num}",
+    "durationMediumHours": "one#saa {num}|#masaa {num}",
+    "1#1 dy|#{num} dys": "#siku {num}",
+    "durationMediumWeeks": "#wiki {num}",
+    "1#1 mo|#{num} mos": "one#mwezi {num}|#miezi {num}",
+    "durationMediumYears": "one#mwaka {num}|#miaka {num}",
     "durationShortMillis": "one#ms {num}|#ms {num}",
     "#{num}s": "one#s {num}|#s {num}",
     "durationShortMinutes": "one#dakika {num}|#dakika {num}",
