--- a/js/data/locale/swc/sysres.json
+++ b/js/data/locale/swc/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "#{num} w",
     "1#1 mon|#{num} mons": "#{num} m",
     "1#1 yr|#{num} yrs": "#{num} y",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "#{num} ms",
+    "1#1 se|#{num} sec": "#{num} s",
+    "1#1 mi|#{num} min": "#{num} min",
+    "durationMediumHours": "#{num} h",
+    "1#1 dy|#{num} dys": "#{num} d",
+    "durationMediumWeeks": "#{num} w",
+    "1#1 mo|#{num} mos": "#{num} m",
+    "durationMediumYears": "#{num} y",
     "durationShortMillis": "#{num} ms",
     "#{num}s": "#{num} s",
     "durationShortMinutes": "#{num} min",
