--- a/js/data/locale/ta/sysres.json
+++ b/js/data/locale/ta/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "one#{num} வாரம்|#{num} வாரங்கள்",
     "1#1 mon|#{num} mons": "one#{num} மாதம்|#{num} மாதங்கள்",
     "1#1 yr|#{num} yrs": "one#{num} ஆண்டு|#{num} ஆண்டு.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} மி.வி.|#{num} மி.வி.",
+    "1#1 se|#{num} sec": "#{num} வி",
+    "1#1 mi|#{num} min": "#{num} நி",
+    "durationMediumHours": "#{num} மண",
+    "1#1 dy|#{num} dys": "#{num} நா",
+    "durationMediumWeeks": "#{num} வா",
+    "1#1 mo|#{num} mos": "#{num} மா",
+    "durationMediumYears": "#{num} வர",
     "durationShortMillis": "one#{num} மி.வி.|#{num} மி.வி.",
     "#{num}s": "one#{num} வி.|#{num} வி.",
     "durationShortMinutes": "one#{num} நிமி.|#{num} நிமி.",
