--- a/js/data/locale/te/sysres.json
+++ b/js/data/locale/te/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} వా.|#{num} వా.",
     "1#1 mon|#{num} mons": "one#{num} నె.|#{num} నె.",
     "1#1 yr|#{num} yrs": "one#{num} సం.|#{num} సం.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num}మి.సె|#{num}మి.సె",
+    "1#1 se|#{num} sec":  "#{num} సె",
+    "1#1 mi|#{num} min": "#{num} ని",
+    "durationMediumHours": "one#{num} గంట|#{num} గం",
+    "1#1 dy|#{num} dys": "one#{num} రో|#{num} రోజు",
+    "durationMediumWeeks": "#{num} వా",
+    "1#1 mo|#{num} mos": "one#{num} నెల|#{num} నె",
+    "durationMediumYears": "#{num} సం",
     "durationShortMillis": "one#{num}మి.సె|#{num}మి.సె",
     "#{num}s": "one#{num}సె|#{num}సె",
     "durationShortMinutes": "one#{num}ని|#{num}ని",
