--- a/js/data/locale/tr/sysres.json
+++ b/js/data/locale/tr/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} hf.|#{num} hf.",
     "1#1 mon|#{num} mons": "one#{num} ay|#{num} ay",
     "1#1 yr|#{num} yrs": "one#{num} yıl|#{num} yıl",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num}msn|#{num}msn",
+    "1#1 se|#{num} sec": "#{num} sn",
+    "1#1 mi|#{num} min": "#{num} dk",
+    "durationMediumHours": "#{num} sa",
+    "1#1 dy|#{num} dys": "#{num} gün",
+    "durationMediumWeeks": "#{num} hf",
+    "1#1 mo|#{num} mos": "#{num} ay",
+    "durationMediumYears": "#{num} yıl",
     "durationShortMillis": "one#{num}msn|#{num}msn",
     "#{num}s": "one#{num}sn|#{num}sn",
     "durationShortMinutes": "one#{num}d|#{num}d",
