--- a/js/data/locale/uk/sysres.json
+++ b/js/data/locale/uk/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "one#{num} тиж.|few#{num} тиж.|many#{num} тиж.|#{num} тиж.",
     "1#1 mon|#{num} mons": "one#{num} міс.|few#{num} міс.|many#{num} міс.|#{num} міс.",
     "1#1 yr|#{num} yrs": "one#{num} р.|few#{num} р.|many#{num} р.|#{num} р.",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} мс|few#{num} мс|many#{num} мс|#{num} мс",
+    "1#1 se|#{num} sec": "#{num} се",
+    "1#1 mi|#{num} min": "#{num} хв.",
+    "durationMediumHours": "#{num} го",
+    "1#1 dy|#{num} dys": "one#{num} де|few#{num} дні|many#{num} дн|#{num} дня",
+    "durationMediumWeeks": "#{num} ти",
+    "1#1 mo|#{num} mos": "#{num} мі",
+    "durationMediumYears": "#{num} р.",
     "durationShortMillis": "one#{num} мс|few#{num} мс|many#{num} мс|#{num} мс",
     "#{num}s": "one#{num} с|few#{num} с|many#{num} с|#{num} с",
     "durationShortMinutes": "one#{num} хв|few#{num} хв|many#{num} хв|#{num} хв",
