--- a/js/data/locale/ur/sysres.json
+++ b/js/data/locale/ur/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} ہفتہ|#{num} ہفتے",
     "1#1 mon|#{num} mons": "one#{num} مہینہ|#{num} مہینے",
     "1#1 yr|#{num} yrs": "one#{num} سال|#{num} سال",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "#{num} سی",
+    "1#1 mi|#{num} min": "#{num} منٹ",
+    "durationMediumHours": "#{num} گھ",
+    "1#1 dy|#{num} dys": "#{num} دن",
+    "durationMediumWeeks": "#{num} ہف",
+    "1#1 mo|#{num} mos": "#{num} مہ",
+    "durationMediumYears": "#{num} سال",
     "durationShortMillis": "one#{num} ms|#{num} ms",
     "#{num}s": "one#{num}s|#{num}s",
     "durationShortMinutes": "one#{num} منٹ|#{num} منٹ",
