--- a/js/data/locale/uz/Cyrl/sysres.json
+++ b/js/data/locale/uz/Cyrl/sysres.json
@@ -96,6 +96,14 @@
     "1#1 wk|#{num} wks": "one#{num} ҳафт|#{num} ҳафт",
     "1#1 mon|#{num} mons": "one#{num} ой|#{num} ой",
     "1#1 yr|#{num} yrs": "one#{num} й|#{num} й",
+    "durationMediumMillis": "one#{num} мс|#{num} мс",
+    "1#1 se|#{num} sec":"#{num} се",
+    "1#1 mi|#{num} min": "#{num} да",
+    "durationMediumHours": "#{num} со",
+    "1#1 dy|#{num} dys": "#{num} ку",
+    "durationMediumWeeks": "#{num} ха",
+    "1#1 mo|#{num} mos": "#{num} оы",
+    "durationMediumYears": "#{num} уи",
     "durationShortMillis": "one#{num} мс|#{num} мс",
     "#{num}s": "one#{num} сон|#{num} сон",
     "durationShortMinutes": "one#{num} дақ|#{num} дақ",
