--- a/js/data/locale/uz/sysres.json
+++ b/js/data/locale/uz/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} haft|#{num} haft",
     "1#1 mon|#{num} mons": "one#{num} oy|#{num} oy",
     "1#1 yr|#{num} yrs": "one#{num} yil|#{num} yil",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "#{num} se",
+    "1#1 mi|#{num} min": "#{num} da",
+    "durationMediumHours": "#{num} so",
+    "1#1 dy|#{num} dys": "#{num} ku",
+    "durationMediumWeeks": "#{num} ha",
+    "1#1 mo|#{num} mos": "#{num} oy",
+    "durationMediumYears": "#{num} yi",
     "durationShortMillis": "one#{num} ms|#{num} ms",
     "#{num}s": "one#{num} son|#{num} son",
     "durationShortMinutes": "one#{num} daq|#{num} daq",
