--- a/js/data/locale/vi/sysres.json
+++ b/js/data/locale/vi/sysres.json
@@ -173,14 +173,14 @@
     "1#1 wk|#{num} wks": "#{num} tuần",
     "1#1 mon|#{num} mons": "#{num} tháng",
     "1#1 yr|#{num} yrs": "#{num} năm",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "#{num}ms",
+    "1#1 se|#{num} sec": "#{num} gi",
+    "1#1 mi|#{num} min": "#{num} ph",
+    "durationMediumHours": "#{num} giờ",
+    "1#1 dy|#{num} dys": "#{num} ng",
+    "durationMediumWeeks": "#{num} tu",
+    "1#1 mo|#{num} mos": "#{num} th",
+    "durationMediumYears": "#{num} năm",
     "durationShortMillis": "#{num}ms",
     "#{num}s": "#{num} giây",
     "durationShortMinutes": "#{num} phút",
