--- a/js/data/locale/zu/sysres.json
+++ b/js/data/locale/zu/sysres.json
@@ -97,14 +97,14 @@
     "1#1 wk|#{num} wks": "one#{num} viki|#{num} amaviki",
     "1#1 mon|#{num} mons": "one#{num} nyanga|#{num} izinyanga",
     "1#1 yr|#{num} yrs": "one#{num} y|#{num} yrs",
-    "durationMediumMillis": "",
-    "1#1 se|#{num} sec": "",
-    "1#1 mi|#{num} min": "",
-    "durationMediumHours": "",
-    "1#1 dy|#{num} dys": "",
-    "durationMediumWeeks": "",
-    "1#1 mo|#{num} mos": "",
-    "durationMediumYears": "",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
+    "1#1 se|#{num} sec": "one#isekhondi elingu-{num}|#{num} am",
+    "1#1 mi|#{num} min": "one#iminithi elingu-{num}|#{num} am",
+    "durationMediumHours": "one#ihora elingu-{num}|#{num} am",
+    "1#1 dy|#{num} dys": "one#usuku olungu-{num}|#{num} iz",
+    "durationMediumWeeks": "one#iviki elingu-{num}|#{num} am",
+    "1#1 mo|#{num} mos": "one#inyanga engu-{num}|#{num} iz",
+    "durationMediumYears": "one#unyaka ongu-{num}|#{num} im",
     "durationShortMillis": "one#{num} ms|#{num} ms",
     "#{num}s": "one#{num} s|#{num} s",
     "durationShortMinutes": "one#{num} min|#{num} min",
