Fix QA Issues for duration

--- a/js/data/locale/ja/sysres.json
+++ b/js/data/locale/ja/sysres.json
@@ -111,8 +111,8 @@
     "#{num}w": "#{num}週間",
     "durationShortMonths": "#{num}か月",
     "#{num}y": "#{num}年",
-    "separatorFull": "、",
-    "finalSeparatorFull": "、",
+    "separatorFull": " ",
+    "finalSeparatorFull": " ",
     "separatorLong": " ",
     "finalSeparatorLong": " ",
     "separatorMedium": " ",
