Fix date N format which should be show number as following iLib spec

--- a/js/data/locale/am/sysres.json
+++ b/js/data/locale/am/sysres.json
@@ -2,55 +2,55 @@
     "MMMM1-ethiopic": "መስከረም",
     "MMM1-ethiopic": "መስከ",
     "NN1-ethiopic": "መስ",
-    "N1-ethiopic": "1",
+    "N1-ethiopic": "መ",
     "MMMM2-ethiopic": "ጥቅምት",
     "MMM2-ethiopic": "ጥቅም",
     "NN2-ethiopic": "ጥቅ",
-    "N2-ethiopic": "2",
+    "N2-ethiopic": "ጥ",
     "MMMM3-ethiopic": "ኅዳር",
     "MMM3-ethiopic": "ኅዳር",
     "NN3-ethiopic": "ኅዳ",
-    "N3-ethiopic": "3",
+    "N3-ethiopic": "ኅ",
     "MMMM4-ethiopic": "ታኅሣሥ",
     "MMM4-ethiopic": "ታኅሣ",
     "NN4-ethiopic": "ታኅ",
-    "N4-ethiopic": "4",
+    "N4-ethiopic": "ታ",
     "MMMM5-ethiopic": "ጥር",
     "MMM5-ethiopic": "ጥር",
     "NN5-ethiopic": "ጥር",
-    "N5-ethiopic": "5",
+    "N5-ethiopic": "ጥ",
     "MMMM6-ethiopic": "የካቲት",
     "MMM6-ethiopic": "የካቲ",
     "NN6-ethiopic": "የካ",
-    "N6-ethiopic": "6",
+    "N6-ethiopic": "የ",
     "MMMM7-ethiopic": "መጋቢት",
     "MMM7-ethiopic": "መጋቢ",
     "NN7-ethiopic": "መጋ",
-    "N7-ethiopic": "7",
+    "N7-ethiopic": "መ",
     "MMMM8-ethiopic": "ሚያዝያ",
     "MMM8-ethiopic": "ሚያዝ",
     "NN8-ethiopic": "ሚያ",
-    "N8-ethiopic": "8",
+    "N8-ethiopic": "ሚ",
     "MMMM9-ethiopic": "ግንቦት",
     "MMM9-ethiopic": "ግንቦ",
     "NN9-ethiopic": "ግን",
-    "N9-ethiopic": "9",
+    "N9-ethiopic": "ግ",
     "MMMM10-ethiopic": "ሰኔ",
     "MMM10-ethiopic": "ሰኔ",
     "NN10-ethiopic": "ሰኔ",
-    "N10-ethiopic": "10",
+    "N10-ethiopic": "ሰ",
     "MMMM11-ethiopic": "ሐምሌ",
     "MMM11-ethiopic": "ሐምሌ",
     "NN11-ethiopic": "ሐም",
-    "N11-ethiopic": "11",
+    "N11-ethiopic": "ሐ",
     "MMMM12-ethiopic": "ነሐሴ",
     "MMM12-ethiopic": "ነሐሴ",
     "NN12-ethiopic": "ነሐ",
-    "N12-ethiopic": "12",
+    "N12-ethiopic": "ነ",
     "MMMM13-ethiopic": "ጳጉሜን",
     "MMM13-ethiopic": "ጳጉሜ",
     "NN13-ethiopic": "ጳጉ",
-    "N13-ethiopic": "13",
+    "N13-ethiopic": "ጳ",
     "EEEE0-ethiopic": "እሑድ",
     "EEE0-ethiopic": "እሑድ",
     "EE0-ethiopic": "እ",
