--- a/js/data/locale/th/dateformats.json
+++ b/js/data/locale/th/dateformats.json
@@ -209,6 +209,12 @@
                 "m": "MMM",
                 "s": "M"
             },
+            "n": {
+                "s": "N",
+                "m": "NN",
+                "l": "MMM",
+                "f": "MMMM"
+            },
             "y": {
                 "f": "yyyy",
                 "l": "yyyy",
