Fix tool code for number to use minus sign instead of '-' string
Fix number data using tool code and modify test cases of number and currency

--- a/js/data/locale/en/DE/localeinfo.json
+++ b/js/data/locale/en/DE/localeinfo.json
@@ -6,7 +6,8 @@
             "common": "{n} {s}",
             "commonNegative": "-{n} {s}"
         },
-        "pctFmt": "{n} %"
+        "pctFmt": "{n} %",
+        "negativepctFmt": "-{n} %"
     },
     "locale": "en-DE"
 }
