--- a/js/data/locale/fa/AF/localeinfo.json
+++ b/js/data/locale/fa/AF/localeinfo.json
@@ -2,7 +2,7 @@
     "numfmt": {
         "currencyFormats": {
             "common": "{s} {n}",
-            "commonNegative": "-{s} {n}"
+            "commonNegative": "‎−{s} {n}"
         }
     },
     "locale": "fa-AF"
