--- a/js/data/locale/en/AT/localeinfo.json
+++ b/js/data/locale/en/AT/localeinfo.json
@@ -6,7 +6,8 @@
             "common": "{s} {n}",
             "commonNegative": "-{s} {n}"
         },
-        "pctFmt": "{n} %"
+        "pctFmt": "{n} %",
+        "negativepctFmt": "-{n} %"
     },
     "locale": "en-AT"
 }
