--- a/js/data/locale/en/SE/localeinfo.json
+++ b/js/data/locale/en/SE/localeinfo.json
@@ -7,7 +7,8 @@
             "common": "{n} {s}",
             "commonNegative": "-{n} {s}"
         },
-        "pctFmt": "{n} %"
+        "pctFmt": "{n} %",
+        "negativepctFmt": "-{n} %"
     },
     "locale": "en-SE"
 }
