--- a/js/data/locale/lrc/localeinfo.json
+++ b/js/data/locale/lrc/localeinfo.json
@@ -5,7 +5,12 @@
         "groupChar": "٬",
         "pctChar": "٪",
         "exponential": "×۱۰^",
+        "currencyFormats": {
+            "commonNegative": "‎-‎{s} {n}"
+        },
+        "negativenumFmt": "‎-‎{n}",
         "pctFmt": "{n}٪",
+        "negativepctFmt": "‎-‎{n}٪",
         "digits": "۰۱۲۳۴۵۶۷۸۹",
         "useNative": true
     },
