Change resources generated from tool code modified

--- a/js/data/locale/ctype.json
+++ b/js/data/locale/ctype.json
@@ -52,6 +52,12 @@
             8233
         ]
     ],
+    "adlam": [
+        [
+            125184,
+            125279
+        ]
+    ],
     "aegean": [
         [
             65792,
@@ -182,6 +188,12 @@
             2559
         ]
     ],
+    "bhaiksuki": [
+        [
+            72704,
+            72815
+        ]
+    ],
     "block": [
         [
             9600,
@@ -228,7 +240,7 @@
             5983
         ]
     ],
-    "byzantine musical": [
+    "byzantinemusic": [
         [
             118784,
             119039
@@ -400,6 +412,10 @@
             1327
         ],
         [
+            7296,
+            7311
+        ],
+        [
             11744,
             11775
         ],
@@ -512,6 +528,10 @@
         [
             11264,
             11359
+        ],
+        [
+            122880,
+            122927
         ]
     ],
     "gothic": [
@@ -984,6 +1004,12 @@
             128767
         ]
     ],
+    "marchen": [
+        [
+            72816,
+            72895
+        ]
+    ],
     "mathematical": [
         [
             10176,
@@ -1054,6 +1080,10 @@
         [
             6144,
             6319
+        ],
+        [
+            71264,
+            71295
         ]
     ],
     "mro": [
@@ -1092,6 +1122,12 @@
         [
             67712,
             67759
+        ]
+    ],
+    "newa": [
+        [
+            70656,
+            70783
         ]
     ],
     "newtailue": [
@@ -1192,6 +1228,12 @@
         [
             128592,
             128639
+        ]
+    ],
+    "osage": [
+        [
+            66736,
+            66815
         ]
     ],
     "osmanya": [
@@ -1470,6 +1512,12 @@
         [
             2944,
             3071
+        ]
+    ],
+    "tangut": [
+        [
+            94176,
+            101119
         ]
     ],
     "telugu": [
